# easyPheno

./: .gitignore  .readthedocs.yaml  README.md  cuda_oom_test.py  easyPheno.py  pyproject.toml  run_phenotype_pred_framework.py  setup.cfg  setup.py
Docker/: Dockerfile  Dockerfile_MKL  GPU_Dockerfile  Voraussetzungen für Lauffähigkeit  packages.txt  requirements.txt
case_study/: Simulation_2.csv  Simulation_3.csv  atwell_ld_pruned-Simulation_1-sim1.h5  atwell_ld_pruned-Simulation_2-sim2.h5  atwell_ld_pruned-Simulation_3-sim3.h5  atwell_ld_pruned-atwell_pheno_FT16-FT16.h5  atwell_pheno_FT16.csv
case_study/atwell_ld_pruned/: Simulation_1.csv  Simulations_Overview.csv
case_study/atwell_ld_pruned/sim_configs/: background_1.csv  background_2.csv  background_3.csv  betas_background_1.csv  betas_background_2.csv  betas_background_3.csv  simulation_config_1.csv  simulation_config_2.csv  simulation_config_3.csv
data/test/: x_matrix.h5  y_matrix.csv
docs/: conf.py  evaluation.rst  index.rst  install.md  model.rst  optimization.rst  preprocess.rst  requirements.txt  utils.rst
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree
docs/_build/.doctrees/autoapi/: index.doctree
docs/_build/_sources/autoapi/: index.rst.txt
docs/_build/autoapi/: index.html
docs/source/: conf.py  data.rst  easyPheno.rst  index.rst  install.md  install.rst  install_docker.rst  install_pip.rst  model.rst  models.rst  modules.rst  preprocess.rst  quick_api.rst  quick_cli.rst  quickstart.rst  requirements.txt  simulation.rst  tutorials.rst
docs/source/models/: bayesianalphabet.rst  blup.rst  cnn.rst  hyperparam_optim.rst  linreg.rst  localcnn.rst  mlp.rst  rf.rst  svm.rst  xgb.rst
docs/source/tutorials/: HowTo Use easyPheno as a pip package.ipynb  HowTo: Use easyPheno as a pip package.ipynb  tut_adv.rst  tut_adv_add_new.rst  tut_adv_adjustexisting.rst  tut_adv_codewalkthrough.rst  tut_adv_reuse_optimized.rst  tut_adv_synth.rst  tut_run_docker.rst  tut_run_pip.rst  tut_sum_results.rst
easyPheno/: __init__.py  generate_feat_impo.py  optim_pipeline.py  pipeline.py  run.py
easyPheno/evaluation/: __init__.py  results_analysis.py
easyPheno/model/: __init__.py  _base_model.py  _bayes_R.py  _bayesian_alphabet.py  _bayesian_linreg.py  _model_functions.py  _param_free_base_model.py  _sklearn_model.py  _tensorflow_model.py  _torch_model.py  bayes.py  bayesA.py  bayesA_R.py  bayesA_own.py  bayesB.py  bayesB_R.py  bayesC.py  bayesC_R.py  bayes_ridge.py  blup.py  cnn.py  elasticnet.py  linearregression.py  localcnn.py  mlp.py  randomforest.py  svm.py  xgboost.py
easyPheno/optimization/: __init__.py  optuna_optim.py  paramfree_fitting.py
easyPheno/postprocess/: __init__.py  generate_feat_impo.py  inference.py  model_reuse.py  plot_results.py  results_analysis.py  retrain_on_new_dataset.py  run_inference.py  run_post_generate_feat_impo.py  run_retrain_on_new_data.py  run_summarize_results.py
easyPheno/preprocess/: __init__.py  base_dataset.py  encoding_functions.py  raw_data_functions.py
easyPheno/simulate/: __init__.py  results_analysis_synthetic_data.py  run_results_analysis_synthetic_data.py  run_synthetic_phenotypes.py  synthetic_phenotypes.py
easyPheno/utils/: __init__.py  check_functions.py  helper_functions.py
easypheno/: __init__.py  optim_pipeline.py  run.py
easypheno/evaluation/: eval_metrics.py
easypheno/model/: __init__.py  _base_model.py  _bayesfromR.py  _bayesian_linreg.py  _model_functions.py  _param_free_base_model.py  _sklearn_model.py  _template_sklearn_model.py  _template_tensorflow_model.py  _template_torch_model.py  _tensorflow_model.py  _torch_model.py  bayesA_R.py  bayesAfromR.py  bayesB_R.py  bayesBfromR.py  bayesC_R.py  bayesCfromR.py  bayes_ridge.py  blup.py  cnn.py  elasticnet.py  linearregression.py  localcnn.py  mlp.py  randomforest.py  svm.py  xgboost.py
easypheno/optimization/: optuna_optim.py  paramfree_fitting.py
easypheno/postprocess/: feat_importance.py  model_reuse.py  rerun_inference.py  results_analysis.py  run_inference.py  run_plot_results.py  run_retrain_on_new_data.py  run_summarize_results.py
easypheno/preprocess/: base_dataset.py  encoding_functions.py  raw_data_functions.py
easypheno/simulate/: results_analysis_synthetic_data.py  run_synthetic_phenotypes.py  synthetic_phenotypes.py
easypheno/utils/: helper_functions.py  print_functions.py
evaluation/: eval_metrics.py
model/: _base_model.py  _model_functions.py  _sklearn_model.py  _tensorflow_model.py  _torch_model.py  base_model.py  cnn.py  linearregression.py  localcnn.py  mlp.py  randomforest.py  sklearn_model.py  svm.py  test.py  torch_model.py  xgboost.py
oldstuff/: CNN.py  ML4RG_EvalMeasures_FT10.ipynb  MLP_Class.py  MLP_Regress.py  PreprocessSNP.ipynb  RRBLUP.ipynb  SNPDataset.py
optimization/: optuna_optim.py  optuna_optim_run.py
preprocess/: base_dataset.py  encoding_functions.py  raw_data_functions.py
tutorial_data/: y_matrix.csv
utils/: check_functions.py  helper_functions.py  print_functions.py
(+89 files in other folders)
