[metadata]
name = easypheno
version = 0.0.5
description = state-of-the-art and easy-to-use plant phenotype prediction
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
author = Florian Haselbeck, Maura John, Dominik G. Grimm
url = https://github.com/grimmlab/easyPheno
project_urls =
    Documentation = https://easypheno.readthedocs.io/
    Source = https://github.com/grimmlab/easyPheno
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.8
install_requires =
    torch>=1.11.0
    xgboost>=1.5.2
    optuna==2.10.0
    joblib>=1.1.0
    numpy>=1.22.2
    pandas>=1.4.1
    pandas-plink>=2.2.9
    h5py>=3.5.0
    scikit-learn>=1.0.2
    tensorflow>=2.8.0
    XlsxWriter>=3.0.3
    seaborn>=0.11.2
    pyro-ppl>=1.8.1

[options.packages.find]
exclude =
    examples*
    docs*
    case_study*



    # URLs
    url='https://github.com/grimmlab/easyPheno',
    project_urls={
        "Documentation": "https://easypheno.readthedocs.io/"
    },
    # build stuff
    packages=find_packages(),
    install_requires=["torch==1.11.0",
                      "xgboost==1.5.2",
                      "optuna==2.10.0",
                      "joblib==1.1.0",
                      "numpy==1.22.2",
                      "pandas==1.4.1",
                      "pandas-plink==2.2.9",
                      "h5py==3.5.0",
                      "scikit-learn==1.0.2",
                      "tensorflow==2.8.0",
                      "XlsxWriter==3.0.3",
                      "rpy2==3.5.2",
                      "seaborn==0.11.2",
                      "pyro-ppl==1.8.1"
                      ],

    # see https://pypi.org/classifiers/
    classifiers=[
        'Development Status :: 2 - Pre-Alpha',
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: MIT License',
        'Operating System :: POSIX :: Linux',
        'Programming Language :: Python :: 3',
        'Topic :: Scientific/Engineering :: Bio-Informatics'
    ],
    python_requires=">=3.8"